# mac-m1-wasmtime-docker

./: Cargo.toml  Dockerfile  README.md
src/: main.rs
