[package]
name = "mac-m1-wasmtime-docker"
version = "0.1.0"
authors = ["Otávio Pace <otaviopp8@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasmtime = "0.27.0"
anyhow = "1.0.42"
# futures03 = { version = "0.3.1", package = "futures", features = ["compat"] }
